--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <button onclick="uploadFile()">Tải lên</button>
         <p id="message"></p>
     </div>
-    
+
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-storage.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
